add index css files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="display">
       <div class="container container-header">
         <nav class="navigation-box">
           <a href="./index.html" class="logo-header"
@@ -59,7 +59,7 @@
 
       <section class="section-description">
         <div class="container">
-          <h2 class="two-section">Advantages</h2>
+          <h2 class="two-section visually-hidden">Advantages</h2>
           <ul class="list-description">
             <li class="advantages-list">
               <h3 class="advantages-title">Strategy</h3>
@@ -162,7 +162,7 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list-blocks">
-            <li>
+            <li class="portfolio-content">
               <img
                 class="portfolio-image"
                 src="./images/ourpotfolio1.jpg"
@@ -177,7 +177,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="portfolio-content">
               <img
                 src="./images/ourportfolio2.jpg"
                 alt="Cashless Payment"
@@ -191,7 +191,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="portfolio-content">
               <img
                 src="./images/ourportfolio3.jpg"
                 alt="Meditation App"
@@ -205,7 +205,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="portfolio-content">
               <img
                 src="./images/ourportfolio4.jpg"
                 alt="Taxi Service"
@@ -219,7 +219,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="portfolio-content">
               <img
                 src="./images/ourportfolio5.jpg"
                 alt="Screen Illustrations"
@@ -233,7 +233,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="portfolio-content">
               <img
                 src="./images/ourportfolio6.jpg"
                 alt="Online Courses"
